<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_ganti_password"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            android:background="@color/blue_A700"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.AppBarLayout>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/img_background_2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_dark_80"
        android:layout_alignParentTop="true"/>



    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">



        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />



        <View
            android:layout_width="0dp"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="Fajar Kurniawan"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/green_300"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:text="Silahkan ganti password anda"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/blue_grey_300" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"/>



        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ganti_password_email"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/blue_grey_200" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:theme="@style/EditText.Green" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_baru"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/blue_grey_200" />

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:theme="@style/EditText.Green" />



        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mxlarge" />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/btn_ganti"
            android:layout_height="55dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:background="@drawable/btn_rounded_green_300"
            android:text="@string/btn_change_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_xlarge" />


    </LinearLayout>

</RelativeLayout>