<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:orientation="vertical">



    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/img_background_2" />

    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/overlay_dark_80"
            android:layout_alignParentTop="true"/>



    <LinearLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">



        <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

        <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_round_bg"/>

        <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="Selamat Datang di RSI Klaten"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/green_300"
                android:textStyle="bold" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                android:text="Silahkan login untuk melanjutkan"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/blue_grey_300" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

            <ProgressBar
                    android:id="@+id/login_progress"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:indeterminate="true"/>



        </LinearLayout>

        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_email"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/blue_grey_200" />

        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:theme="@style/EditText.Green" />

        <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/blue_grey_200" />

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:theme="@style/EditText.Green" />

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:id="@+id/et_g_pass"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:theme="@style/EditText.Green" />

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:id="@+id/et_g_email"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:theme="@style/EditText.Green" />


        <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mxlarge" />

        <Button
                android:layout_width="match_parent"
                android:id="@+id/bt_login"
                android:layout_height="55dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:background="@drawable/btn_rounded_green_300"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Login Dengan Google"
            android:paddingLeft="30dp"
            android:drawableLeft="@drawable/ic_g_icon"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_rect_teal_outline" />

        <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />



        <LinearLayout
                android:id="@+id/sign_up_for_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Belum Punya Akun? "
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/blue_grey_300" />

            <TextView
                    android:id="@+id/tv_btn_daftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="Daftar"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/green_300"
                    android:textStyle="bold" />



        </LinearLayout>




        <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_xlarge" />


    </LinearLayout>

</RelativeLayout>