<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/img_background_2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_dark_80"

        android:layout_alignParentTop="true"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_large"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_round_bg" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="Selamat Datang di RSI Klaten"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/green_300"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="Silahkan daftar untuk melanjutkan"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/blue_grey_300" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/reg_progress"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone"/>


            </LinearLayout>


            <View
                android:layout_width="0dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NAMA LENGKAP"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/blue_grey_200" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_nama_lengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:theme="@style/EditText.Green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_email"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/blue_grey_200" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:theme="@style/EditText.Green" />




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/blue_grey_200" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:theme="@style/EditText.Green" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_user_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:theme="@style/EditText.Green" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_g_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:theme="@style/EditText.Green" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_g_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:theme="@style/EditText.Green" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_g_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:theme="@style/EditText.Green" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_g_user_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:theme="@style/EditText.Green" />


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:background="@drawable/btn_rounded_green_300"
                android:text="@string/btn_daftar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_xsmall" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:text="Daftar Dengan Google"
                android:paddingLeft="30dp"
                android:drawableLeft="@drawable/ic_g_icon"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_rect_teal_outline" />



            <LinearLayout
                android:id="@+id/sign_up_for_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sudah Punya Akun? "
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/blue_grey_300" />

                <TextView
                    android:id="@+id/toLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="Login"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/green_300"
                    android:textStyle="bold" />




            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>